--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img class="home-img" src="images/new.jpeg" alt="">
+                    <img class="home-img" src="images/Passport_Photograph.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text"><span class="aboutRaw" id="user-detail-name">I'm Prashant Upadhyay and I'm a</span> <br>
